--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
-# Compiled class file
+# Compiled class files
 *.class
 
-# Log file
+# Maven target directory (build output)
+workspace/target/
+
+# Log files
 *.log
 
-# BlueJ files
+# BlueJ IDE files
 *.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
 *.nar
@@ -19,6 +22,13 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# JVM crash logs
 hs_err_pid*
 replay_pid*
+
+# IDE configurations (if you use IntelliJ or Eclipse)
+*.iml
+.idea/
+*.project
+*.classpath
+*.settings/
